infrastructure/network-setup.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Network setup for the application

Parameters:
  AZ1:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: First availability zone for the VPC
    Default: us-east-1a
  AZ2:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: Second availability zone for the VPC
    Default: us-east-1b
  Production:
    Type: String
    Description: Whether to use a NAT Gateway for private subnets
    AllowedValues:
      - true
      - false
    Default: false

Conditions:
  IsProduction: !Equals
    - !Ref Production
    - 'true'
  NotProduction: !Not
    - !Equals
      - !Ref Production
      - 'true'
Resources:
  # 1. Main Structure: VPC, Subnets
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.16.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: hojadevida-vpc

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.16.0.0/20
      AvailabilityZone: !Ref AZ1
      MapPublicIpOnLaunch: !If
        - IsProduction
        - false
        - true
      Tags:
        - Key: Name
          Value: hojadevida-subnet-1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.16.16.0/20
      AvailabilityZone: !Ref AZ2
      MapPublicIpOnLaunch: !If
        - IsProduction
        - false
        - true
      Tags:
        - Key: Name
          Value: hojadevida-subnet-2

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.16.32.0/20
      AvailabilityZone: !Ref AZ1
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: hojadevida-public-subnet-1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.16.48.0/20
      AvailabilityZone: !Ref AZ2
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: hojadevida-public-subnet-2

  # 2. Internet Gateway for public subnets

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: hojadevida-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # 3. NAT Gateways for private subnets

  EIP1:
    Type: AWS::EC2::EIP
    Condition: IsProduction
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: hojadevida-eip-1

  EIP2:
    Type: AWS::EC2::EIP
    Condition: IsProduction
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: hojadevida-eip-2

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Condition: IsProduction
    Properties:
      AllocationId: !GetAtt EIP1.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: hojadevida-nat-gateway-1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Condition: IsProduction
    Properties:
      AllocationId: !GetAtt EIP2.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: hojadevida-nat-gateway-2

  # 4. Route Tables
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: hojadevida-public-rt

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: hojadevida-private-rt-1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: hojadevida-private-rt-2

  # 5. Routes
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRoute1:
    Type: AWS::EC2::Route
    Condition: IsProduction
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateRoute2:
    Type: AWS::EC2::Route
    Condition: IsProduction
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateRouteNoNat1:
    Type: AWS::EC2::Route
    Condition: NotProduction
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRouteNoNat2:
    Type: AWS::EC2::Route
    Condition: NotProduction
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # 6. Subnet Associations
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2
      
Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name: Hojadevida-VPC
  PublicSubnet1:
    Description: Public Subnet 1 ID
    Value: !Ref PublicSubnet1
    Export:
      Name: Hojadevida-PublicSubnet1
  PublicSubnet2:
    Description: Public Subnet 2 ID
    Value: !Ref PublicSubnet2
    Export:
      Name: Hojadevida-PublicSubnet2
  PrivateSubnet1:
    Description: Private Subnet 1 ID
    Value: !Ref PrivateSubnet1
    Export:
      Name: Hojadevida-PrivateSubnet1
  PrivateSubnet2:
    Description: Private Subnet 2 ID
    Value: !Ref PrivateSubnet2
    Export:
      Name: Hojadevida-PrivateSubnet2
